Add data analysis

--- a/code/jupyter/data_analysis.ipynb
+++ b/code/jupyter/data_analysis.ipynb
@@ -1,16 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [
+    "# Data Analysis"
+   ],
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-12-29T12:48:47.486397700Z",
-     "start_time": "2024-12-29T12:48:47.230068700Z"
-    }
+    "collapsed": false
    },
+   "id": "ea76bc975bfd2809"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -51,20 +53,18 @@
     "plt.grid(True)\n",
     "plt.axis(\"equal\")\n",
     "\n",
+    "\n",
     "# Show the plot\n",
-    "plt.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+    "plt.show()\n"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-29T14:23:47.790490900Z",
+     "start_time": "2024-12-29T14:23:47.566990900Z"
+    }
    },
-   "id": "15fd9c4a395fc290"
+   "id": "1d91bd8d3c866fbf"
   }
  ],
  "metadata": {
