Add data analysis

--- a/code/jupyter/data_analysis.ipynb
+++ b/code/jupyter/data_analysis.ipynb
@@ -69,7 +69,7 @@
     "# 3. Target character highlighted\n",
     "target_col = random.randint(0, 5)\n",
     "create_p300_image(highlight_col=target_col,\n",
-    "                  title=\"Random Column Highlighted\")\n"
+    "                  title=\"Random Column Highlighted\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -147,9 +147,8 @@
     "plt.grid(True)\n",
     "plt.axis(\"equal\")\n",
     "\n",
-    "\n",
     "# Show the plot\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
