Add data analysis

--- a/code/jupyter/CNN1_model.ipynb
+++ b/code/jupyter/CNN1_model.ipynb
@@ -103,7 +103,7 @@
     "print(\"Sampling Frequency: %d Hz [%.2f ms]\" % (SAMPLING_FREQUENCY, (1000/SAMPLING_FREQUENCY)))\n",
     "print(\"Session duration:   %.2f min\" % RECORDING_DURATION)\n",
     "print(\"Number of letters:  %d\" % TRIALS)\n",
-    "print(\"Spelled word:       %s\" % ''.join(word))\n"
+    "print(\"Spelled word:       %s\" % ''.join(word))"
    ],
    "metadata": {
     "collapsed": false,
