--- a/code/jupyter/data_analysis.ipynb
+++ b/code/jupyter/data_analysis.ipynb
@@ -301,6 +301,14 @@
     }
    },
    "id": "f74282ae29d27ddf"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b3d1527bb93149b5"
   }
  ],
  "metadata": {
