--- a/code/jupyter/CNN1_model.ipynb
+++ b/code/jupyter/CNN1_model.ipynb
@@ -2,117 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-29T16:27:08.028821900Z",
-     "start_time": "2024-12-29T16:27:08.000737900Z"
+     "end_time": "2024-12-29T20:24:17.825724300Z",
+     "start_time": "2024-12-29T20:24:17.764585600Z"
     }
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "import numpy as np     \n",
-    "import random           \n",
-    "from scipy.io import loadmat\n",
-    "from scipy import signal\n",
-    "import warnings\n",
-    "import string\n",
-    "import os\n",
-    "\n",
-    "from keras.layers import *\n",
-    "from keras.models import Model\n",
-    "from keras import backend as K\n",
-    "from keras import Sequential\n",
-    "from keras.callbacks import ModelCheckpoint\n",
-    "from keras.callbacks import EarlyStopping\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.preprocessing import scale\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "# Install mne library for topoplot\n",
-    "import mne\n",
-    "\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "####################### SETTINGS ########################\n",
-    "# Set this variable with the desidered subject's letter #\n",
-    "SUBJECT_SELECTED = \"II\"                                 #\n",
-    "#########################################################\n",
-    "\n",
-    "subject_names = [\"I\", \"II\"]\n",
-    "\n",
-    "\n",
-    "# Google drive data paths\n",
-    "MODEL_LOCATIONS_FILE_PATH = '../model/CNN1/' + SUBJECT_SELECTED\n",
-    "SUBJECT_TRAIN_FILE_PATH = '../data/Contributor_' + SUBJECT_SELECTED + '_Train.mat'\n",
-    "SUBJECT_TEST_FILE_PATH = '../data/Contributor_' + SUBJECT_SELECTED + '_Test.mat'\n",
-    "CHANNEL_LOCATIONS_FILE_PATH = '../data/channels.csv'\n",
-    "CHANNEL_COORD = '../data/coordinates.csv'\n",
-    "\n",
-    "# Channel selection\n",
-    "CHANNELS = [i for i in range(64)]"
+    "# import matplotlib.pyplot as plt\n",
+    "# import seaborn as sns\n",
+    "# import pandas as pd\n",
+    "# import numpy as np     \n",
+    "# import random           \n",
+    "# from scipy.io import loadmat\n",
+    "# from scipy import signal\n",
+    "# import warnings\n",
+    "# import string\n",
+    "# import os\n",
+    "# \n",
+    "# from keras.layers import *\n",
+    "# from keras.models import Model\n",
+    "# from keras import backend as K\n",
+    "# from keras import Sequential\n",
+    "# from keras.callbacks import ModelCheckpoint\n",
+    "# from keras.callbacks import EarlyStopping\n",
+    "# from sklearn.metrics import confusion_matrix\n",
+    "# from sklearn.preprocessing import scale\n",
+    "# from sklearn.preprocessing import MinMaxScaler\n",
+    "# \n",
+    "# import tensorflow as tf\n",
+    "# \n",
+    "# # Install mne library for topoplot\n",
+    "# import mne\n",
+    "# \n",
+    "# warnings.filterwarnings('ignore')\n",
+    "# \n",
+    "# ####################### SETTINGS ########################\n",
+    "# # Set this variable with the desidered subject's letter #\n",
+    "# SUBJECT_SELECTED = \"II\"                                 #\n",
+    "# #########################################################\n",
+    "# \n",
+    "# subject_names = [\"I\", \"II\"]\n",
+    "# \n",
+    "# \n",
+    "# # Google drive data paths\n",
+    "# MODEL_LOCATIONS_FILE_PATH = '../model/CNN1/' + SUBJECT_SELECTED\n",
+    "# SUBJECT_TRAIN_FILE_PATH = '../data/Contributor_' + SUBJECT_SELECTED + '_Train.mat'\n",
+    "# SUBJECT_TEST_FILE_PATH = '../data/Contributor_' + SUBJECT_SELECTED + '_Test.mat'\n",
+    "# CHANNEL_LOCATIONS_FILE_PATH = '../data/channels.csv'\n",
+    "# CHANNEL_COORD = '../data/coordinates.csv'\n",
+    "# \n",
+    "# # Channel selection\n",
+    "# CHANNELS = [i for i in range(64)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********************************\n",
-      "       TRAIN SET INFORMATION      \n",
-      "**********************************\n",
-      "Sampling Frequency: 240 Hz [4.17 ms]\n",
-      "Session duration:   46.01 min\n",
-      "Number of letters:  85\n",
-      "Spelled word:       VGREAAH8TVRHBYN_UGCOLO4EUERDOOHCIFOMDNU6LQCPKEIREKOYRQIDJXPBKOJDWZEUEWWFOEBHXTQTTZUMO\n"
-     ]
-    }
-   ],
+   "execution_count": 18,
+   "outputs": [],
    "source": [
-    " # Load the required data\n",
-    "data = loadmat(SUBJECT_TRAIN_FILE_PATH)\n",
-    "# Get the variables of interest from the loaded dictionary\n",
-    "signals = data['Signal']\n",
-    "flashing = data['Flashing']\n",
-    "stimulus = data['StimulusType']\n",
-    "word = data['TargetChar']\n",
-    "\n",
-    "SAMPLING_FREQUENCY = 240\n",
-    "# From the dataset description we know that there are 15 repetitions\n",
-    "REPETITIONS = 15\n",
-    "# Compute the duration of the recording in minutes\n",
-    "RECORDING_DURATION = (len(signals))*(len(signals[0]))/(SAMPLING_FREQUENCY*60)\n",
-    "# Compute number of trials\n",
-    "TRIALS = len(word[0])\n",
-    "# Set flag to True to balance the training set\n",
-    "BALANCE_DATASET = False\n",
-    "\n",
-    "print(\"**********************************\")\n",
-    "print(\"       TRAIN SET INFORMATION      \")\n",
-    "print(\"**********************************\")\n",
-    "print(\"Sampling Frequency: %d Hz [%.2f ms]\" % (SAMPLING_FREQUENCY, (1000/SAMPLING_FREQUENCY)))\n",
-    "print(\"Session duration:   %.2f min\" % RECORDING_DURATION)\n",
-    "print(\"Number of letters:  %d\" % TRIALS)\n",
-    "print(\"Spelled word:       %s\" % ''.join(word))"
+    "#  # Load the required data\n",
+    "# data = loadmat(SUBJECT_TRAIN_FILE_PATH)\n",
+    "# # Get the variables of interest from the loaded dictionary\n",
+    "# signals = data['Signal']\n",
+    "# flashing = data['Flashing']\n",
+    "# stimulus = data['StimulusType']\n",
+    "# word = data['TargetChar']\n",
+    "# \n",
+    "# SAMPLING_FREQUENCY = 240\n",
+    "# # From the dataset description we know that there are 15 repetitions\n",
+    "# REPETITIONS = 15\n",
+    "# # Compute the duration of the recording in minutes\n",
+    "# RECORDING_DURATION = (len(signals))*(len(signals[0]))/(SAMPLING_FREQUENCY*60)\n",
+    "# # Compute number of trials\n",
+    "# TRIALS = len(word[0])\n",
+    "# # Set flag to True to balance the training set\n",
+    "# BALANCE_DATASET = False\n",
+    "# \n",
+    "# print(\"**********************************\")\n",
+    "# print(\"       TRAIN SET INFORMATION      \")\n",
+    "# print(\"**********************************\")\n",
+    "# print(\"Sampling Frequency: %d Hz [%.2f ms]\" % (SAMPLING_FREQUENCY, (1000/SAMPLING_FREQUENCY)))\n",
+    "# print(\"Session duration:   %.2f min\" % RECORDING_DURATION)\n",
+    "# print(\"Number of letters:  %d\" % TRIALS)\n",
+    "# print(\"Spelled word:       %s\" % ''.join(word))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-29T16:27:08.116558200Z",
-     "start_time": "2024-12-29T16:27:08.025809800Z"
+     "end_time": "2024-12-29T20:24:17.839035800Z",
+     "start_time": "2024-12-29T20:24:17.787293800Z"
     }
    },
    "id": "dede6065c7f35501"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 2-dimensional, but 3 were indexed",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[19], line 136\u001B[0m\n\u001B[0;32m    133\u001B[0m     plt\u001B[38;5;241m.\u001B[39mshow()\n\u001B[0;32m    135\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m--> 136\u001B[0m     \u001B[43mmain\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[19], line 105\u001B[0m, in \u001B[0;36mmain\u001B[1;34m()\u001B[0m\n\u001B[0;32m    103\u001B[0m signals \u001B[38;5;241m=\u001B[39m apply_filter(signals, sampling_freq)\n\u001B[0;32m    104\u001B[0m signals \u001B[38;5;241m=\u001B[39m downsample(signals, downsample_factor)\n\u001B[1;32m--> 105\u001B[0m flashing \u001B[38;5;241m=\u001B[39m \u001B[43mdownsample\u001B[49m\u001B[43m(\u001B[49m\u001B[43mflashing\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdownsample_factor\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    106\u001B[0m stimulus \u001B[38;5;241m=\u001B[39m downsample(stimulus, downsample_factor)\n\u001B[0;32m    108\u001B[0m features, labels, ratio \u001B[38;5;241m=\u001B[39m extract_features_labels(signals, flashing, stimulus, window_samples)\n",
+      "Cell \u001B[1;32mIn[19], line 59\u001B[0m, in \u001B[0;36mdownsample\u001B[1;34m(signals, factor)\u001B[0m\n\u001B[0;32m     58\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdownsample\u001B[39m(signals, factor):\n\u001B[1;32m---> 59\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43msignals\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m:\u001B[49m\u001B[43m:\u001B[49m\u001B[43mfactor\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m:\u001B[49m\u001B[43m]\u001B[49m\n",
+      "\u001B[1;31mIndexError\u001B[0m: too many indices for array: array is 2-dimensional, but 3 were indexed"
+     ]
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-29T20:24:21.345461600Z",
+     "start_time": "2024-12-29T20:24:17.797180600Z"
+    }
+   },
+   "id": "38d273778eb95255"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-29T20:24:21.357539200Z",
+     "start_time": "2024-12-29T20:24:21.349974800Z"
+    }
+   },
+   "id": "705289e13ae0e688"
   }
  ],
  "metadata": {
