--- a/code/jupyter/CNN1_model.ipynb
+++ b/code/jupyter/CNN1_model.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-29T20:24:17.825724300Z",
-     "start_time": "2024-12-29T20:24:17.764585600Z"
+     "end_time": "2024-12-30T09:27:08.712298600Z",
+     "start_time": "2024-12-30T09:27:08.694266500Z"
     }
    },
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "#  # Load the required data\n",
@@ -94,50 +94,86 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-29T20:24:17.839035800Z",
-     "start_time": "2024-12-29T20:24:17.787293800Z"
+     "end_time": "2024-12-30T09:27:08.727308Z",
+     "start_time": "2024-12-30T09:27:08.707265700Z"
     }
    },
    "id": "dede6065c7f35501"
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 2-dimensional, but 3 were indexed",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[19], line 136\u001B[0m\n\u001B[0;32m    133\u001B[0m     plt\u001B[38;5;241m.\u001B[39mshow()\n\u001B[0;32m    135\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m--> 136\u001B[0m     \u001B[43mmain\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[1;32mIn[19], line 105\u001B[0m, in \u001B[0;36mmain\u001B[1;34m()\u001B[0m\n\u001B[0;32m    103\u001B[0m signals \u001B[38;5;241m=\u001B[39m apply_filter(signals, sampling_freq)\n\u001B[0;32m    104\u001B[0m signals \u001B[38;5;241m=\u001B[39m downsample(signals, downsample_factor)\n\u001B[1;32m--> 105\u001B[0m flashing \u001B[38;5;241m=\u001B[39m \u001B[43mdownsample\u001B[49m\u001B[43m(\u001B[49m\u001B[43mflashing\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdownsample_factor\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    106\u001B[0m stimulus \u001B[38;5;241m=\u001B[39m downsample(stimulus, downsample_factor)\n\u001B[0;32m    108\u001B[0m features, labels, ratio \u001B[38;5;241m=\u001B[39m extract_features_labels(signals, flashing, stimulus, window_samples)\n",
-      "Cell \u001B[1;32mIn[19], line 59\u001B[0m, in \u001B[0;36mdownsample\u001B[1;34m(signals, factor)\u001B[0m\n\u001B[0;32m     58\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdownsample\u001B[39m(signals, factor):\n\u001B[1;32m---> 59\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43msignals\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m:\u001B[49m\u001B[43m:\u001B[49m\u001B[43mfactor\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m:\u001B[49m\u001B[43m]\u001B[49m\n",
-      "\u001B[1;31mIndexError\u001B[0m: too many indices for array: array is 2-dimensional, but 3 were indexed"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-29T20:24:21.345461600Z",
-     "start_time": "2024-12-29T20:24:17.797180600Z"
+     "end_time": "2024-12-30T09:27:08.744283100Z",
+     "start_time": "2024-12-30T09:27:08.722265700Z"
     }
    },
    "id": "38d273778eb95255"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using default location ~/mne_data for sample...\n",
+      "Creating C:\\Users\\user\\mne_data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading file 'MNE-sample-data-processed.tar.gz' from 'https://osf.io/86qa2/download?version=6' to 'C:\\Users\\user\\mne_data'.\n",
+      "  9%|###5                                  | 156M/1.65G [00:41<06:50, 3.64MB/s]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 5\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mmne\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdatasets\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m sample\n\u001B[0;32m      4\u001B[0m \u001B[38;5;66;03m# Load example data\u001B[39;00m\n\u001B[1;32m----> 5\u001B[0m data_path \u001B[38;5;241m=\u001B[39m \u001B[43msample\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdata_path\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      6\u001B[0m raw_fname \u001B[38;5;241m=\u001B[39m data_path \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMEG\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124msample\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124msample_audvis-ave.fif\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m      7\u001B[0m evokeds \u001B[38;5;241m=\u001B[39m mne\u001B[38;5;241m.\u001B[39mread_evokeds(raw_fname, baseline\u001B[38;5;241m=\u001B[39m(\u001B[38;5;28;01mNone\u001B[39;00m, \u001B[38;5;241m0\u001B[39m), proj\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "File \u001B[1;32m<decorator-gen-323>:12\u001B[0m, in \u001B[0;36mdata_path\u001B[1;34m(path, force_update, update_path, download, verbose)\u001B[0m\n",
+      "File \u001B[1;32mD:\\University\\Year 4 semester 1\\ENCS5200\\BrainWaveResearch\\code\\venv\\lib\\site-packages\\mne\\datasets\\sample\\sample.py:13\u001B[0m, in \u001B[0;36mdata_path\u001B[1;34m(path, force_update, update_path, download, verbose)\u001B[0m\n\u001B[0;32m      9\u001B[0m \u001B[38;5;129m@verbose\u001B[39m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdata_path\u001B[39m(\n\u001B[0;32m     11\u001B[0m     path\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, force_update\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m, update_path\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, download\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, \u001B[38;5;241m*\u001B[39m, verbose\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m     12\u001B[0m ):  \u001B[38;5;66;03m# noqa: D103\u001B[39;00m\n\u001B[1;32m---> 13\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_download_mne_dataset\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m     14\u001B[0m \u001B[43m        \u001B[49m\u001B[43mname\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43msample\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m     15\u001B[0m \u001B[43m        \u001B[49m\u001B[43mprocessor\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43muntar\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m     16\u001B[0m \u001B[43m        \u001B[49m\u001B[43mpath\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpath\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     17\u001B[0m \u001B[43m        \u001B[49m\u001B[43mforce_update\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mforce_update\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     18\u001B[0m \u001B[43m        \u001B[49m\u001B[43mupdate_path\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mupdate_path\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     19\u001B[0m \u001B[43m        \u001B[49m\u001B[43mdownload\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdownload\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     20\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mD:\\University\\Year 4 semester 1\\ENCS5200\\BrainWaveResearch\\code\\venv\\lib\\site-packages\\mne\\datasets\\utils.py:242\u001B[0m, in \u001B[0;36m_download_mne_dataset\u001B[1;34m(name, processor, path, force_update, update_path, download, accept)\u001B[0m\n\u001B[0;32m    237\u001B[0m         this_dataset[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdataset_name\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m name\n\u001B[0;32m    238\u001B[0m         dataset_params\u001B[38;5;241m.\u001B[39mappend(this_dataset)\n\u001B[0;32m    240\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m cast(\n\u001B[0;32m    241\u001B[0m     Path,\n\u001B[1;32m--> 242\u001B[0m     \u001B[43mfetch_dataset\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    243\u001B[0m \u001B[43m        \u001B[49m\u001B[43mdataset_params\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdataset_params\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    244\u001B[0m \u001B[43m        \u001B[49m\u001B[43mprocessor\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mprocessor_\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    245\u001B[0m \u001B[43m        \u001B[49m\u001B[43mpath\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpath\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    246\u001B[0m \u001B[43m        \u001B[49m\u001B[43mforce_update\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mforce_update\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    247\u001B[0m \u001B[43m        \u001B[49m\u001B[43mupdate_path\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mupdate_path\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    248\u001B[0m \u001B[43m        \u001B[49m\u001B[43mdownload\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdownload\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    249\u001B[0m \u001B[43m        \u001B[49m\u001B[43maccept\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43maccept\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    250\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m,\n\u001B[0;32m    251\u001B[0m )\n",
+      "File \u001B[1;32mD:\\University\\Year 4 semester 1\\ENCS5200\\BrainWaveResearch\\code\\venv\\lib\\site-packages\\mne\\datasets\\_fetch.py:262\u001B[0m, in \u001B[0;36mfetch_dataset\u001B[1;34m(dataset_params, processor, path, force_update, update_path, download, check_version, return_version, accept, auth, token)\u001B[0m\n\u001B[0;32m    260\u001B[0m archive_name \u001B[38;5;241m=\u001B[39m dataset_params[idx][\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124marchive_name\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[0;32m    261\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m--> 262\u001B[0m     \u001B[43mfetcher\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfetch\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    263\u001B[0m \u001B[43m        \u001B[49m\u001B[43mfname\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43marchive_name\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdownloader\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdownloader\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mprocessor\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mprocessor\u001B[49m\n\u001B[0;32m    264\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    265\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n\u001B[0;32m    266\u001B[0m     err \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mstr\u001B[39m(err)\n",
+      "File \u001B[1;32mD:\\University\\Year 4 semester 1\\ENCS5200\\BrainWaveResearch\\code\\venv\\lib\\site-packages\\pooch\\core.py:589\u001B[0m, in \u001B[0;36mPooch.fetch\u001B[1;34m(self, fname, processor, downloader, progressbar)\u001B[0m\n\u001B[0;32m    586\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m downloader \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m    587\u001B[0m         downloader \u001B[38;5;241m=\u001B[39m choose_downloader(url, progressbar\u001B[38;5;241m=\u001B[39mprogressbar)\n\u001B[1;32m--> 589\u001B[0m     \u001B[43mstream_download\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    590\u001B[0m \u001B[43m        \u001B[49m\u001B[43murl\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    591\u001B[0m \u001B[43m        \u001B[49m\u001B[43mfull_path\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    592\u001B[0m \u001B[43m        \u001B[49m\u001B[43mknown_hash\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    593\u001B[0m \u001B[43m        \u001B[49m\u001B[43mdownloader\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    594\u001B[0m \u001B[43m        \u001B[49m\u001B[43mpooch\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    595\u001B[0m \u001B[43m        \u001B[49m\u001B[43mretry_if_failed\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mretry_if_failed\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    596\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    598\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m processor \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m    599\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m processor(\u001B[38;5;28mstr\u001B[39m(full_path), action, \u001B[38;5;28mself\u001B[39m)\n",
+      "File \u001B[1;32mD:\\University\\Year 4 semester 1\\ENCS5200\\BrainWaveResearch\\code\\venv\\lib\\site-packages\\pooch\\core.py:807\u001B[0m, in \u001B[0;36mstream_download\u001B[1;34m(url, fname, known_hash, downloader, pooch, retry_if_failed)\u001B[0m\n\u001B[0;32m    803\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m    804\u001B[0m     \u001B[38;5;66;03m# Stream the file to a temporary so that we can safely check its\u001B[39;00m\n\u001B[0;32m    805\u001B[0m     \u001B[38;5;66;03m# hash before overwriting the original.\u001B[39;00m\n\u001B[0;32m    806\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m temporary_file(path\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mstr\u001B[39m(fname\u001B[38;5;241m.\u001B[39mparent)) \u001B[38;5;28;01mas\u001B[39;00m tmp:\n\u001B[1;32m--> 807\u001B[0m         \u001B[43mdownloader\u001B[49m\u001B[43m(\u001B[49m\u001B[43murl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtmp\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpooch\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    808\u001B[0m         hash_matches(tmp, known_hash, strict\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, source\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mstr\u001B[39m(fname\u001B[38;5;241m.\u001B[39mname))\n\u001B[0;32m    809\u001B[0m         shutil\u001B[38;5;241m.\u001B[39mmove(tmp, \u001B[38;5;28mstr\u001B[39m(fname))\n",
+      "File \u001B[1;32mD:\\University\\Year 4 semester 1\\ENCS5200\\BrainWaveResearch\\code\\venv\\lib\\site-packages\\pooch\\downloaders.py:243\u001B[0m, in \u001B[0;36mHTTPDownloader.__call__\u001B[1;34m(self, url, output_file, pooch, check_only)\u001B[0m\n\u001B[0;32m    241\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m chunk:\n\u001B[0;32m    242\u001B[0m     output_file\u001B[38;5;241m.\u001B[39mwrite(chunk)\n\u001B[1;32m--> 243\u001B[0m     \u001B[43moutput_file\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mflush\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    244\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprogressbar:\n\u001B[0;32m    245\u001B[0m         \u001B[38;5;66;03m# Use the chunk size here because chunk may be much\u001B[39;00m\n\u001B[0;32m    246\u001B[0m         \u001B[38;5;66;03m# larger if the data are decompressed by requests after\u001B[39;00m\n\u001B[0;32m    247\u001B[0m         \u001B[38;5;66;03m# reading (happens with text files).\u001B[39;00m\n\u001B[0;32m    248\u001B[0m         progress\u001B[38;5;241m.\u001B[39mupdate(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mchunk_size)\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import mne\n",
+    "from mne.datasets import sample\n",
+    "\n",
+    "# Load example data\n",
+    "data_path = sample.data_path()\n",
+    "raw_fname = data_path / 'MEG' / 'sample' / 'sample_audvis-ave.fif'\n",
+    "evokeds = mne.read_evokeds(raw_fname, baseline=(None, 0), proj=True)\n",
+    "\n",
+    "# Select an evoked response (e.g., 'Left Auditory')\n",
+    "evoked = evokeds[0]\n",
+    "\n",
+    "# Plot a topomap for a specific time point\n",
+    "time_point = 0.1  # time in seconds\n",
+    "evoked.plot_topomap(times=time_point, ch_type='mag', time_unit='s')\n"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-29T20:24:21.357539200Z",
-     "start_time": "2024-12-29T20:24:21.349974800Z"
+     "end_time": "2024-12-30T09:27:53.475370500Z",
+     "start_time": "2024-12-30T09:27:08.740279300Z"
     }
    },
    "id": "705289e13ae0e688"
