--- a/code/jupyter/CNN1.ipynb
+++ b/code/jupyter/CNN1.ipynb
@@ -105,14 +105,20 @@
    "source": [
     "from scipy.io import loadmat\n",
     "from scipy import signal\n",
-    "from bundle.ImageCraft import * \n",
+    "from bundle.DataCraft import * \n",
     "\n",
     "data_train = loadmat(contributor_train_file_path)\n",
+    "signals_train = data_train['Signal']\n",
+    "flashing_train = data_train['Flashing']\n",
+    "stimulus_train = data_train['StimulusType']\n",
+    "word_train = data_train['TargetChar']\n",
     "sampling_frequency = 240\n",
     "repetitions = 15\n",
+    "recording_duration_train = (len(signals_train)) * (len(signals_train[0])) / (sampling_frequency * 60)\n",
+    "trials_train = len(word_train[0])\n",
     "\n",
     "print(\"Train Data:\")\n",
-    "print_data(data_train['Signal'], data_train['TargetChar'], contributor_selected, sampling_frequency)"
+    "print_data(signals_train, word_train, contributor_selected, sampling_frequency)"
    ],
    "execution_count": 241,
    "outputs": [
@@ -142,12 +148,7 @@
     }
    },
    "source": [
-    "signals_train = data_train['Signal']\n",
-    "flashing_train = data_train['Flashing']\n",
-    "stimulus_train = data_train['StimulusType']\n",
-    "word_train = data_train['TargetChar']\n",
-    "recording_duration_train = (len(signals_train)) * (len(signals_train[0])) / (sampling_frequency * 60)\n",
-    "trials_train = len(word_train[0])\n",
+    "\n",
     "\n",
     "\n",
     "# Application of butterworth filter\n",
@@ -308,7 +309,7 @@
     }
    },
    "source": [
-    "from bundle.ImageCraft import *  \n",
+    "from bundle.DataCraft import *  \n",
     "\n",
     "data_test = loadmat(contributor_test_file_path)\n",
     "sampling_frequency = 240\n",
@@ -1103,8 +1104,8 @@
      "height": 377
     },
     "ExecuteTime": {
-     "end_time": "2024-12-30T15:25:45.121805Z",
-     "start_time": "2024-12-30T15:25:43.964324Z"
+     "end_time": "2024-12-30T16:32:18.603809300Z",
+     "start_time": "2024-12-30T16:32:15.935924300Z"
     }
    },
    "source": [
@@ -1172,7 +1173,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ],
-   "execution_count": 251,
+   "execution_count": 257,
    "outputs": [
     {
      "name": "stdout",
