RNN model in the server

--- a/code/jupyter/CNN_B.ipynb
+++ b/code/jupyter/CNN_B.ipynb
@@ -621,7 +621,7 @@
     "    return 1.7159 * K.tanh((2.0 / 3.0) * z)\n",
     "\n",
     "# Build the model\n",
-    "def CNN2a_model(channels=8, filters=10):\n",
+    "def CNN_B_model(channels=8, filters=10):\n",
     "    model = Sequential([\n",
     "        Conv1D(\n",
     "            filters = filters,\n",
@@ -658,7 +658,7 @@
     "\n",
     "# Model summary\n",
     "# Model definition\n",
-    "model = CNN2a_model(channels=8, filters=10)\n",
+    "model = CNN_B_model(channels=8, filters=10)\n",
     "model.summary()"
    ],
    "execution_count": 27,
@@ -757,7 +757,7 @@
     "model.set_weights(best_weights)\n",
     "\n",
     "# Define a new model to reuse the best configuration\n",
-    "best_model = CNN2a_model(channels=8, filters=10)\n",
+    "best_model = CNN_B_model(channels=8, filters=10)\n",
     "best_model.set_weights(best_weights)\n",
     "\n",
     "# Compile the best model\n",
@@ -1397,7 +1397,7 @@
     "plt.figure(figsize = (6,5))\n",
     "sns.set(font_scale = 1.4)\n",
     "cm = sns.heatmap(df_cm, cmap=\"Blues\", annot=True, annot_kws = {\"size\": 16}, vmin=0, vmax=1)\n",
-    "cm.axes.set_title(\"CNN2a confusion matrix\\n\", fontsize=20)\n",
+    "cm.axes.set_title(\"CNN B confusion matrix\\n\", fontsize=20)\n",
     "plt.show()"
    ],
    "execution_count": 32,
