RNN model in the server

--- a/code/jupyter/CNN_A.ipynb
+++ b/code/jupyter/CNN_A.ipynb
@@ -22,7 +22,7 @@
     "colab_type": "text"
    },
    "source": [
-    "# CNN1 SETTINGS"
+    "# CNN_A SETTINGS"
    ]
   },
   {
@@ -518,7 +518,7 @@
     "colab_type": "text"
    },
    "source": [
-    "# CNN1 model definition, training and testing\n",
+    "# CNN_A model definition, training and testing\n",
     "\n",
     "1.   Function definiton for randomization of weights and biases;\n",
     "2.   **Scaled_tanh(x)** activation function definition;\n",
