--- a/ecd/jupyter/new-data.ipynb
+++ b/ecd/jupyter/new-data.ipynb
@@ -29,8 +29,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-13T09:39:21.495286Z",
-     "start_time": "2025-05-13T09:39:20.996891700Z"
+     "end_time": "2025-05-15T10:49:52.064974100Z",
+     "start_time": "2025-05-15T10:49:51.083935900Z"
     }
    },
    "id": "189d752f13e679c2"
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-13T09:39:22.108679900Z",
-     "start_time": "2025-05-13T09:39:21.499710800Z"
+     "end_time": "2025-05-15T10:49:53.049885600Z",
+     "start_time": "2025-05-15T10:49:52.062958900Z"
     }
    },
    "id": "374de39660eac2dd"
@@ -115,8 +115,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-13T09:39:25.888106700Z",
-     "start_time": "2025-05-13T09:39:22.109688800Z"
+     "end_time": "2025-05-15T10:49:59.838606700Z",
+     "start_time": "2025-05-15T10:49:53.060425900Z"
     }
    },
    "id": "a22fcd76032f5d23"
@@ -183,8 +183,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-13T09:39:35.972209100Z",
-     "start_time": "2025-05-13T09:39:25.901576600Z"
+     "end_time": "2025-05-15T10:50:18.511737800Z",
+     "start_time": "2025-05-15T10:49:59.835579900Z"
     }
    },
    "id": "c1ed8d5edff2a1bd"
@@ -210,44 +210,44 @@
      "output_type": "stream",
      "text": [
       "Features tensor shape: (15300, 78, 64)\n",
-      "Generated 50 sentences from 728 characters.\n",
-      "Sentence 0: THEY MAKE FOOD.\n",
-      "Sentence 1: YOU SEE POEMS.\n",
-      "Sentence 2: THEY PLAY WATER.\n",
-      "Sentence 3: SHE SEES EMAILS\n",
-      "Sentence 4: HE EATS GAMES.\n",
+      "Generated 50 sentences from 736 characters.\n",
+      "Sentence 0: YOU USE PAPER.\n",
+      "Sentence 1: YOU MAKE MUSIC.\n",
+      "Sentence 2: SHE EATS PAPER\n",
+      "Sentence 3: YOU MAKE MUSIC.\n",
+      "Sentence 4: THEY USE POEMS.\n",
       "Character to sentence mapping (first 10 characters):\n",
-      "Char 0: 'T', Sentence 0, Position 0\n",
-      "Char 1: 'H', Sentence 0, Position 1\n",
-      "Char 2: 'E', Sentence 0, Position 2\n",
-      "Char 3: 'Y', Sentence 0, Position 3\n",
-      "Char 4: ' ', Sentence 0, Position 4\n",
-      "Char 5: 'M', Sentence 0, Position 5\n",
-      "Char 6: 'A', Sentence 0, Position 6\n",
-      "Char 7: 'K', Sentence 0, Position 7\n",
-      "Char 8: 'E', Sentence 0, Position 8\n",
-      "Char 9: ' ', Sentence 0, Position 9\n",
+      "Char 0: 'Y', Sentence 0, Position 0\n",
+      "Char 1: 'O', Sentence 0, Position 1\n",
+      "Char 2: 'U', Sentence 0, Position 2\n",
+      "Char 3: ' ', Sentence 0, Position 3\n",
+      "Char 4: 'U', Sentence 0, Position 4\n",
+      "Char 5: 'S', Sentence 0, Position 5\n",
+      "Char 6: 'E', Sentence 0, Position 6\n",
+      "Char 7: ' ', Sentence 0, Position 7\n",
+      "Char 8: 'P', Sentence 0, Position 8\n",
+      "Char 9: 'A', Sentence 0, Position 9\n",
       "\n",
-      "Mapping 728 P300 responses to characters in sentences\n",
-      "Created ECD training dataset with 728 samples\n",
-      "Created 678 context samples for NLP model training\n",
-      "Created 678 combined samples for DFM training\n",
+      "Mapping 736 P300 responses to characters in sentences\n",
+      "Created ECD training dataset with 736 samples\n",
+      "Created 686 context samples for NLP model training\n",
+      "Created 686 combined samples for DFM training\n",
       "\n",
       "Example of ECD training data:\n",
-      "Target character: 'T'\n",
-      "From sentence 0: 'THEY MAKE FOOD.'\n",
+      "Target character: 'Y'\n",
+      "From sentence 0: 'YOU USE PAPER.'\n",
       "At position 0\n",
       "Feature shape: (78, 64)\n",
       "\n",
       "Example of NLP context data:\n",
-      "Context: 'T'\n",
-      "Target: 'H'\n",
-      "From sentence 0: 'THEY MAKE FOOD.'\n",
+      "Context: 'Y'\n",
+      "Target: 'O'\n",
+      "From sentence 0: 'YOU USE PAPER.'\n",
       "\n",
       "Example of combined DFM data:\n",
-      "Context: 'T'\n",
-      "Target: 'H'\n",
-      "From sentence 0: 'THEY MAKE FOOD.'\n",
+      "Context: 'Y'\n",
+      "Target: 'O'\n",
+      "From sentence 0: 'YOU USE PAPER.'\n",
       "Feature shape: (78, 64)\n"
      ]
     }
@@ -449,8 +449,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-13T09:39:41.517456400Z",
-     "start_time": "2025-05-13T09:39:35.985419700Z"
+     "end_time": "2025-05-15T10:50:40.584819800Z",
+     "start_time": "2025-05-15T10:50:18.519094300Z"
     }
    },
    "id": "af5439f909b4474d"
